--- a/client/pages/Home.html
+++ b/client/pages/Home.html
@@ -1,4 +1,10 @@
 <template name="Home">
-    <h1>Topics In Meteor</h1>
-    <h3>By Level Up Tutorials</h3>
+    <div class="billboard">
+        <h2>Topics In Meteor</h2>
+        <h3>By Level Up Tutorials</h3>
+        <div class="btn-group">
+            <a href="#" class="btn">Example Button</a>
+            <a href="#" class="btn-text">Example Button</a>
+        </div>
+    </div>
 </template>
