--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
 <head>
-  <title>Topics In Meteor</title>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800,300' rel='stylesheet' type='text/css'>
+  <title>n-Clinic</title>
 </head>
